feat:✨ Update the model

--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,38 +69,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# set GPU"
+    "# GPU Check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-25 14:58:37,830 - INFO - find the GPU and version tf\n",
-      "W0000 00:00:1750859917.829116   10905 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.19.0\n",
-      "False\n",
-      "[]\n"
+      "2025-06-26 14:55:39,713 - INFO - TensorFlow Version: 2.19.0\n",
+      "2025-06-26 14:55:39,730 - INFO - GPU Available: False\n",
+      "W0000 00:00:1750946139.727949   10085 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
+      "2025-06-26 14:55:39,749 - INFO - Physical Devices: []\n"
      ]
     }
    ],
    "source": [
-    "print(tf.__version__)\n",
-    "print(tf.test.is_gpu_available())\n",
-    "print(tf.config.list_physical_devices('GPU'))\n",
-    "logger.info(\"find the GPU and version tf\")"
+    "logger.info(f\"TensorFlow Version: {tf.__version__}\")\n",
+    "logger.info(f\"GPU Available: {tf.test.is_gpu_available()}\")\n",
+    "logger.info(f\"Physical Devices: {tf.config.list_physical_devices('GPU')}\")\n"
    ]
   },
   {
@@ -893,121 +885,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 1/5\n",
-      "Epoch 1/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m119s\u001b[0m 4s/step - accuracy: 0.7985 - auc: 0.0838 - loss: 0.6642 - precision: 0.7985 - recall: 1.0000 - val_accuracy: 0.6667 - val_auc: 0.0000e+00 - val_loss: 0.6913 - val_precision: 0.8000 - val_recall: 0.8000\n",
-      "Epoch 2/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m71s\u001b[0m 3s/step - accuracy: 0.6937 - auc: 0.1779 - loss: 0.5922 - precision: 0.8239 - recall: 0.8172 - val_accuracy: 0.5000 - val_auc: 0.4000 - val_loss: 0.6915 - val_precision: 0.7500 - val_recall: 0.6000\n",
-      "Epoch 3/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m61s\u001b[0m 3s/step - accuracy: 0.2833 - auc: 0.4434 - loss: 0.6596 - precision: 0.6800 - recall: 0.0629 - val_accuracy: 0.3333 - val_auc: 0.4000 - val_loss: 0.7022 - val_precision: 1.0000 - val_recall: 0.2000\n",
-      "Epoch 4/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 2s/step - accuracy: 0.3186 - auc: 0.5369 - loss: 0.6367 - precision: 0.9600 - recall: 0.1318 - val_accuracy: 0.3333 - val_auc: 0.3000 - val_loss: 0.7055 - val_precision: 1.0000 - val_recall: 0.2000\n",
-      "Epoch 5/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 2s/step - accuracy: 0.5451 - auc: 0.2925 - loss: 0.7748 - precision: 0.6000 - recall: 0.0570 - val_accuracy: 0.1667 - val_auc: 0.5000 - val_loss: 0.7250 - val_precision: 0.0000e+00 - val_recall: 0.0000e+00\n",
-      "Epoch 6/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 2s/step - accuracy: 0.3889 - auc: 0.6963 - loss: 0.6546 - precision: 0.8116 - recall: 0.2305 - val_accuracy: 0.3333 - val_auc: 0.3000 - val_loss: 0.6974 - val_precision: 0.6667 - val_recall: 0.4000\n",
-      "Fold 2/5\n",
-      "Epoch 1/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 2s/step - accuracy: 0.6902 - auc: 0.6755 - loss: 0.6678 - precision: 0.7923 - recall: 0.7482 - val_accuracy: 0.6667 - val_auc: 0.5000 - val_loss: 0.6898 - val_precision: 0.6667 - val_recall: 1.0000\n",
-      "Epoch 2/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m64s\u001b[0m 3s/step - accuracy: 0.2238 - auc: 0.2319 - loss: 0.7566 - precision: 0.0800 - recall: 0.0099 - val_accuracy: 0.6667 - val_auc: 0.3750 - val_loss: 0.6911 - val_precision: 0.6667 - val_recall: 1.0000\n",
-      "Epoch 3/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.3557 - auc: 0.2025 - loss: 0.6328 - precision: 0.6575 - recall: 0.4376 - val_accuracy: 0.6667 - val_auc: 0.6250 - val_loss: 0.6846 - val_precision: 0.6667 - val_recall: 1.0000\n",
-      "Epoch 4/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 839ms/step - accuracy: 0.4073 - auc: 0.4389 - loss: 0.7333 - precision: 0.4907 - recall: 0.1432 - val_accuracy: 0.6667 - val_auc: 0.3750 - val_loss: 0.6892 - val_precision: 0.6667 - val_recall: 1.0000\n",
-      "Epoch 5/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 804ms/step - accuracy: 0.5795 - auc: 0.6167 - loss: 0.6650 - precision: 0.7411 - recall: 0.5253 - val_accuracy: 0.6667 - val_auc: 0.3750 - val_loss: 0.6826 - val_precision: 0.6667 - val_recall: 1.0000\n",
-      "Epoch 6/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 1s/step - accuracy: 0.6621 - auc: 0.5610 - loss: 0.6330 - precision: 0.7934 - recall: 0.7116 - val_accuracy: 0.3333 - val_auc: 0.2500 - val_loss: 0.6986 - val_precision: 0.5000 - val_recall: 0.2500\n",
-      "Epoch 7/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 828ms/step - accuracy: 0.5214 - auc: 0.6617 - loss: 0.6389 - precision: 0.8255 - recall: 0.4268 - val_accuracy: 0.3333 - val_auc: 0.2500 - val_loss: 0.6997 - val_precision: 0.5000 - val_recall: 0.2500\n",
-      "Epoch 8/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 1s/step - accuracy: 0.6469 - auc: 0.7920 - loss: 0.6473 - precision: 0.8245 - recall: 0.4812 - val_accuracy: 0.3333 - val_auc: 0.3125 - val_loss: 0.6906 - val_precision: 0.5000 - val_recall: 0.5000\n",
-      "Epoch 9/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 881ms/step - accuracy: 0.8800 - auc: 0.7742 - loss: 0.5880 - precision: 0.8736 - recall: 0.9790 - val_accuracy: 0.3333 - val_auc: 0.2500 - val_loss: 0.6944 - val_precision: 0.5000 - val_recall: 0.5000\n",
-      "Epoch 10/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 1s/step - accuracy: 0.7883 - auc: 0.6790 - loss: 0.5435 - precision: 0.9578 - recall: 0.7591 - val_accuracy: 0.3333 - val_auc: 0.3750 - val_loss: 0.7028 - val_precision: 0.5000 - val_recall: 0.5000\n",
-      "Fold 3/5\n",
-      "Epoch 1/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 1s/step - accuracy: 0.5179 - auc: 0.7130 - loss: 0.6833 - precision: 0.7200 - recall: 0.4507 - val_accuracy: 0.5000 - val_auc: 0.7000 - val_loss: 0.6745 - val_precision: 1.0000 - val_recall: 0.4000\n",
-      "Epoch 2/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 986ms/step - accuracy: 0.3613 - auc: 0.6172 - loss: 0.6781 - precision: 0.5600 - recall: 0.1722 - val_accuracy: 0.5000 - val_auc: 0.7000 - val_loss: 0.6801 - val_precision: 1.0000 - val_recall: 0.4000\n",
-      "Epoch 3/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 1s/step - accuracy: 0.6223 - auc: 0.8706 - loss: 0.6139 - precision: 0.9105 - recall: 0.5354 - val_accuracy: 0.6667 - val_auc: 0.8000 - val_loss: 0.6553 - val_precision: 1.0000 - val_recall: 0.6000\n",
-      "Epoch 4/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m29s\u001b[0m 1s/step - accuracy: 0.5937 - auc: 0.8122 - loss: 0.6401 - precision: 0.9200 - recall: 0.4163 - val_accuracy: 0.5000 - val_auc: 0.7000 - val_loss: 0.6709 - val_precision: 1.0000 - val_recall: 0.4000\n",
-      "Epoch 5/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 1s/step - accuracy: 0.6638 - auc: 0.8090 - loss: 0.6069 - precision: 0.9600 - recall: 0.5297 - val_accuracy: 0.5000 - val_auc: 0.6000 - val_loss: 0.7010 - val_precision: 1.0000 - val_recall: 0.4000\n",
-      "Epoch 6/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 1s/step - accuracy: 1.0000 - auc: 0.8000 - loss: 0.4855 - precision: 1.0000 - recall: 1.0000 - val_accuracy: 0.6667 - val_auc: 0.6000 - val_loss: 0.6830 - val_precision: 1.0000 - val_recall: 0.6000\n",
-      "Epoch 7/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 929ms/step - accuracy: 0.8624 - auc: 0.9493 - loss: 0.4272 - precision: 0.9943 - recall: 0.8030 - val_accuracy: 0.6667 - val_auc: 0.6000 - val_loss: 0.7003 - val_precision: 1.0000 - val_recall: 0.6000\n",
-      "Epoch 8/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 2s/step - accuracy: 0.6429 - auc: 0.8627 - loss: 0.4992 - precision: 0.7765 - recall: 0.6804 - val_accuracy: 0.6667 - val_auc: 0.6000 - val_loss: 0.7237 - val_precision: 1.0000 - val_recall: 0.6000\n",
-      "Fold 4/5\n",
-      "Epoch 1/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 1s/step - accuracy: 0.7375 - auc: 0.8388 - loss: 0.5997 - precision: 0.9532 - recall: 0.6867 - val_accuracy: 1.0000 - val_auc: 1.0000 - val_loss: 0.6102 - val_precision: 1.0000 - val_recall: 1.0000\n",
-      "Epoch 2/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 874ms/step - accuracy: 0.6016 - auc: 0.3704 - loss: 0.8303 - precision: 0.2000 - recall: 0.0136 - val_accuracy: 0.1667 - val_auc: 1.0000 - val_loss: 0.7437 - val_precision: 0.0000e+00 - val_recall: 0.0000e+00\n",
-      "Epoch 3/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 741ms/step - accuracy: 0.6034 - auc: 0.6950 - loss: 0.6237 - precision: 0.7627 - recall: 0.5786 - val_accuracy: 0.8333 - val_auc: 1.0000 - val_loss: 0.6103 - val_precision: 1.0000 - val_recall: 0.8000\n",
-      "Epoch 4/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 955ms/step - accuracy: 0.5532 - auc: 0.9059 - loss: 0.6088 - precision: 0.8400 - recall: 0.2669 - val_accuracy: 0.5000 - val_auc: 1.0000 - val_loss: 0.6413 - val_precision: 1.0000 - val_recall: 0.4000\n",
-      "Epoch 5/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 1s/step - accuracy: 0.8766 - auc: 0.9105 - loss: 0.5857 - precision: 0.9600 - recall: 0.7751 - val_accuracy: 0.5000 - val_auc: 1.0000 - val_loss: 0.6484 - val_precision: 1.0000 - val_recall: 0.4000\n",
-      "Epoch 6/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 1s/step - accuracy: 0.7234 - auc: 0.8419 - loss: 0.5717 - precision: 0.7414 - recall: 0.6531 - val_accuracy: 0.8333 - val_auc: 1.0000 - val_loss: 0.5229 - val_precision: 1.0000 - val_recall: 0.8000\n",
-      "Epoch 7/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m29s\u001b[0m 1s/step - accuracy: 0.8981 - auc: 0.9098 - loss: 0.4418 - precision: 0.9818 - recall: 0.8502 - val_accuracy: 0.8333 - val_auc: 1.0000 - val_loss: 0.4503 - val_precision: 1.0000 - val_recall: 0.8000\n",
-      "Epoch 8/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 1s/step - accuracy: 0.8888 - auc: 0.9503 - loss: 0.3260 - precision: 1.0000 - recall: 0.8344 - val_accuracy: 0.8333 - val_auc: 0.8000 - val_loss: 0.5299 - val_precision: 1.0000 - val_recall: 0.8000\n",
-      "Epoch 9/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 1s/step - accuracy: 0.9073 - auc: 0.9505 - loss: 0.2562 - precision: 0.9600 - recall: 0.8385 - val_accuracy: 0.5000 - val_auc: 0.8000 - val_loss: 1.0970 - val_precision: 1.0000 - val_recall: 0.4000\n",
-      "Epoch 10/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 989ms/step - accuracy: 0.6638 - auc: 0.8711 - loss: 0.4393 - precision: 1.0000 - recall: 0.5793 - val_accuracy: 0.8333 - val_auc: 0.8000 - val_loss: 0.5968 - val_precision: 1.0000 - val_recall: 0.8000\n",
-      "Epoch 11/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 1s/step - accuracy: 1.0000 - auc: 0.9200 - loss: 0.1071 - precision: 1.0000 - recall: 1.0000 - val_accuracy: 0.6667 - val_auc: 0.6000 - val_loss: 0.8269 - val_precision: 0.8000 - val_recall: 0.8000\n",
-      "Epoch 12/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 1s/step - accuracy: 0.9849 - auc: 0.8784 - loss: 0.1256 - precision: 0.8585 - recall: 0.8800 - val_accuracy: 0.5000 - val_auc: 0.8000 - val_loss: 0.9784 - val_precision: 1.0000 - val_recall: 0.4000\n",
-      "Fold 5/5\n",
-      "Epoch 1/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 1s/step - accuracy: 0.7066 - auc: 0.7444 - loss: 0.4245 - precision: 0.8556 - recall: 0.7592 - val_accuracy: 1.0000 - val_auc: 1.0000 - val_loss: 0.2273 - val_precision: 1.0000 - val_recall: 1.0000\n",
-      "Epoch 2/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 1s/step - accuracy: 0.9931 - auc: 0.9600 - loss: 0.2225 - precision: 0.9600 - recall: 0.9516 - val_accuracy: 0.8333 - val_auc: 1.0000 - val_loss: 0.3665 - val_precision: 0.6667 - val_recall: 1.0000\n",
-      "Epoch 3/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 1s/step - accuracy: 0.9537 - auc: 0.4970 - loss: 0.2341 - precision: 0.9665 - recall: 0.9778 - val_accuracy: 1.0000 - val_auc: 1.0000 - val_loss: 0.1484 - val_precision: 1.0000 - val_recall: 1.0000\n",
-      "Epoch 4/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 929ms/step - accuracy: 0.9206 - auc: 0.5858 - loss: 0.2514 - precision: 1.0000 - recall: 0.9137 - val_accuracy: 1.0000 - val_auc: 1.0000 - val_loss: 0.1791 - val_precision: 1.0000 - val_recall: 1.0000\n",
-      "Epoch 5/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 2s/step - accuracy: 1.0000 - auc: 0.9600 - loss: 0.1350 - precision: 1.0000 - recall: 1.0000 - val_accuracy: 0.8333 - val_auc: 1.0000 - val_loss: 0.3878 - val_precision: 0.6667 - val_recall: 1.0000\n",
-      "Epoch 6/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 1s/step - accuracy: 1.0000 - auc: 0.6800 - loss: 0.0680 - precision: 1.0000 - recall: 1.0000 - val_accuracy: 0.8333 - val_auc: 1.0000 - val_loss: 0.4435 - val_precision: 0.6667 - val_recall: 1.0000\n",
-      "Epoch 7/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 2s/step - accuracy: 0.9681 - auc: 0.6800 - loss: 0.1176 - precision: 1.0000 - recall: 0.9635 - val_accuracy: 0.6667 - val_auc: 1.0000 - val_loss: 1.0503 - val_precision: 0.5000 - val_recall: 1.0000\n",
-      "Epoch 8/25\n",
-      "\u001b[1m24/24\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 809ms/step - accuracy: 1.0000 - auc: 0.9600 - loss: 0.0464 - precision: 1.0000 - recall: 1.0000 - val_accuracy: 0.6667 - val_auc: 1.0000 - val_loss: 1.0971 - val_precision: 0.5000 - val_recall: 1.0000\n"
-     ]
-    }
-   ],
-   "source": [
-    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "for fold, (train_idx, val_idx) in enumerate(kf.split(dataset_X)):\n",
-    "    print(f\"Fold {fold+1}/5\")\n",
-    "    X_train, X_val = dataset_X[train_idx], dataset_X[val_idx]\n",
-    "    y_train, y_val = y[train_idx], y[val_idx]\n",
-    "    model.fit(X_train, y_train, batch_size=1, epochs=25, validation_data=(X_val, y_val),\n",
-    "              callbacks=[early_stopping], class_weight=class_weight_dict)"
-   ]
   },
   {
    "cell_type": "code",
