feat:✨ Update the model

--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-25 14:58:57,894 - INFO - read data EEG\n"
+      "2025-06-26 14:57:01,568 - INFO - Initial Dataset Shape: (30, 31000, 19)\n"
      ]
     },
     {
@@ -129,43 +129,27 @@
     "    data_list.append(df.to_numpy())  # Shape: (time_steps=31000, electrodes=19)\n",
     "dataset_X = np.array(data_list)  # Shape: (30, 31000, 19)\n",
     "print(\"Initial Dataset Shape:\", dataset_X.shape)\n",
-    "logger.info(\"read data EEG\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_view = pd.read_csv(f'../../data/data_EEG/s{i:02d}.csv', header=None)\n"
+    "logger.info(f\"Initial Dataset Shape: {dataset_X.shape}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Missing"
+    "# Check for missing values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-25 14:58:59,174 - INFO - see the Missing value about the data\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing Value:\n",
-      " 0     0\n",
+      "2025-06-26 14:57:38,837 - INFO - Missing Values:\n",
+      "0     0\n",
       "1     0\n",
       "2     0\n",
       "3     0\n",
@@ -189,8 +173,8 @@
     }
    ],
    "source": [
-    "print(\"Missing Value:\\n\", df_view.isna().sum())\n",
-    "logger.info('see the Missing value about the data')"
+    "df_view = pd.read_csv(f'../../data/data_EEG/s{0:02d}.csv', header=None)\n",
+    "logger.info(f\"Missing Values:\\n{df_view.isna().sum()}\")\n"
    ]
   },
   {
