feat:✨ Update the model

--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,18 +31,18 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import tensorflow as tf\n",
-    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import LeaveOneOut\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
-    "from scipy import signal\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from scipy import signal, stats\n",
     "import mne\n",
     "import seaborn as sns\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import threading\n",
-    "import warnings\n",
-    "import sweetviz as sv\n",
     "import logging\n",
-    "import mne"
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Dense, Activation, Conv2D, SeparableConv2D, Input, BatchNormalization, Dropout, AveragePooling2D, Flatten\n",
+    "from tensorflow.keras.constraints import max_norm\n"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,25 +74,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-26 14:55:39,713 - INFO - TensorFlow Version: 2.19.0\n",
-      "2025-06-26 14:55:39,730 - INFO - GPU Available: False\n",
-      "W0000 00:00:1750946139.727949   10085 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "2025-06-26 15:03:30,432 - INFO - TensorFlow Version: 2.19.0\n",
+      "2025-06-26 15:03:30,441 - INFO - GPU Available: False\n",
+      "W0000 00:00:1750946610.439519   10085 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
       "Skipping registering GPU devices...\n",
-      "2025-06-26 14:55:39,749 - INFO - Physical Devices: []\n"
+      "2025-06-26 15:03:30,448 - INFO - Physical Devices: []\n"
      ]
     }
    ],
    "source": [
     "logger.info(f\"TensorFlow Version: {tf.__version__}\")\n",
     "logger.info(f\"GPU Available: {tf.test.is_gpu_available()}\")\n",
-    "logger.info(f\"Physical Devices: {tf.config.list_physical_devices('GPU')}\")\n"
+    "logger.info(f\"Physical Devices: {tf.config.list_physical_devices('GPU')}\")"
    ]
   },
   {
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-26 14:57:01,568 - INFO - Initial Dataset Shape: (30, 31000, 19)\n"
+      "2025-06-26 15:03:51,399 - INFO - Initial Dataset Shape: (30, 31000, 19)\n"
      ]
     },
     {
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-26 14:57:38,837 - INFO - Missing Values:\n",
+      "2025-06-26 15:04:11,541 - INFO - Missing Values:\n",
       "0     0\n",
       "1     0\n",
       "2     0\n",
@@ -186,9 +186,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating RawArray with float64 data, n_channels=19, n_times=930000\n",
+      "    Range : 0 ... 929999 =      0.000 ...  3632.809 secs\n",
+      "Ready.\n",
+      "Filtering raw data in 1 contiguous segment\n",
+      "Setting up band-pass filter from 0.5 - 50 Hz\n",
+      "\n",
+      "FIR filter parameters\n",
+      "---------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Designing a one-pass, zero-phase, non-causal bandpass filter:\n",
+      "- Windowed time-domain design (firwin) method\n",
+      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
+      "- Lower passband edge: 0.50\n",
+      "- Lower transition bandwidth: 0.50 Hz (-6 dB cutoff frequency: 0.25 Hz)\n",
+      "- Upper passband edge: 50.00 Hz\n",
+      "- Upper transition bandwidth: 12.50 Hz (-6 dB cutoff frequency: 56.25 Hz)\n",
+      "- Filter length: 1691 samples (6.605 s)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    3.2s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting ICA to data using 19 channels (please be patient, this may take a while)\n",
+      "Selecting by number: 15 components\n",
+      "Fitting ICA took 80.1s.\n",
+      "Applying ICA to Raw instance\n",
+      "    Transforming to ICA space (15 components)\n",
+      "    Zeroing out 0 ICA components\n",
+      "    Projecting back using 19 PCA components\n",
+      "Preprocessed Dataset Shape: (30, 31000, 19)\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess_eeg(data, sfreq=256):\n",
     "    # Create MNE info object\n",
@@ -213,68 +264,17 @@
     "    \n",
     "    # Convert back to original shape\n",
     "    data_clean = raw.get_data().T.reshape(n_subjects, n_times, n_channels)\n",
-    "    return data_clean"
+    "    return data_clean\n",
+    "\n",
+    "dataset_X = preprocess_eeg(dataset_X)\n",
+    "print(\"Preprocessed Dataset Shape:\", dataset_X.shape)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 113,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating RawArray with float64 data, n_channels=19, n_times=930000\n",
-      "    Range : 0 ... 929999 =      0.000 ...  3632.809 secs\n",
-      "Ready.\n",
-      "Filtering raw data in 1 contiguous segment\n",
-      "Setting up band-pass filter from 0.5 - 50 Hz\n",
-      "\n",
-      "FIR filter parameters\n",
-      "---------------------\n",
-      "Designing a one-pass, zero-phase, non-causal bandpass filter:\n",
-      "- Windowed time-domain design (firwin) method\n",
-      "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
-      "- Lower passband edge: 0.50\n",
-      "- Lower transition bandwidth: 0.50 Hz (-6 dB cutoff frequency: 0.25 Hz)\n",
-      "- Upper passband edge: 50.00 Hz\n",
-      "- Upper transition bandwidth: 12.50 Hz (-6 dB cutoff frequency: 56.25 Hz)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Filter length: 1691 samples (6.605 s)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    5.3s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting ICA to data using 19 channels (please be patient, this may take a while)\n",
-      "Selecting by number: 15 components\n",
-      "Fitting ICA took 114.1s.\n",
-      "Applying ICA to Raw instance\n",
-      "    Transforming to ICA space (15 components)\n",
-      "    Zeroing out 0 ICA components\n",
-      "    Projecting back using 19 PCA components\n",
-      "Preprocessed Dataset Shape: (30, 31000, 19)\n"
-     ]
-    }
-   ],
    "source": [
-    "dataset_X = preprocess_eeg(dataset_X)\n",
-    "print(\"Preprocessed Dataset Shape:\", dataset_X.shape)"
+    "# Remove outliers using Z-score"
    ]
   },
   {
