feat:✨ Update the model

--- a/notebook/EEG/prediction_eeg.ipynb
+++ b/notebook/EEG/prediction_eeg.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,8 @@
     "import logging\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.layers import Dense, Activation, Conv2D, SeparableConv2D, Input, BatchNormalization, Dropout, AveragePooling2D, Flatten\n",
-    "from tensorflow.keras.constraints import max_norm\n"
+    "from tensorflow.keras.constraints import max_norm\n",
+    "import warnings\n"
    ]
   },
   {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,18 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-26 15:03:30,432 - INFO - TensorFlow Version: 2.19.0\n",
-      "2025-06-26 15:03:30,441 - INFO - GPU Available: False\n",
-      "W0000 00:00:1750946610.439519   10085 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "2025-06-27 14:34:34,030 - INFO - TensorFlow Version: 2.19.0\n",
+      "2025-06-27 14:34:34,035 - INFO - GPU Available: False\n",
+      "W0000 00:00:1751031274.035442   62397 gpu_device.cc:2341] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
       "Skipping registering GPU devices...\n",
-      "2025-06-26 15:03:30,448 - INFO - Physical Devices: []\n"
+      "2025-06-27 14:34:34,040 - INFO - Physical Devices: []\n"
      ]
     }
    ],
@@ -104,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-26 15:03:51,399 - INFO - Initial Dataset Shape: (30, 31000, 19)\n"
+      "2025-06-27 14:34:48,546 - INFO - Initial Dataset Shape: (30, 31000, 19)\n"
      ]
     },
     {
@@ -141,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-26 15:04:11,541 - INFO - Missing Values:\n",
+      "2025-06-27 14:35:42,552 - INFO - Missing Values:\n",
       "0     0\n",
       "1     0\n",
       "2     0\n",
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -200,13 +201,7 @@
       "Setting up band-pass filter from 0.5 - 50 Hz\n",
       "\n",
       "FIR filter parameters\n",
-      "---------------------\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "---------------------\n",
       "Designing a one-pass, zero-phase, non-causal bandpass filter:\n",
       "- Windowed time-domain design (firwin) method\n",
       "- Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation\n",
@@ -222,7 +217,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    3.2s\n"
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    2.7s\n"
      ]
     },
     {
@@ -231,7 +226,7 @@
      "text": [
       "Fitting ICA to data using 19 channels (please be patient, this may take a while)\n",
       "Selecting by number: 15 components\n",
-      "Fitting ICA took 80.1s.\n",
+      "Fitting ICA took 83.3s.\n",
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (15 components)\n",
       "    Zeroing out 0 ICA components\n",
