feat:🐛  add the CNN Model test

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -65,8 +65,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b3a0de22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = x_train.astype('float32') / 255.0\n",
+    "x_test = x_test.astype('float32') / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "80109f07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = x_train.reshape((x_train.shape[0], 28, 28, 1))\n",
+    "x_test = x_test.reshape((x_test.shape[0], 28, 28, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fe452ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = tf.keras.utils.to_categorical(y_train, 10)\n",
+    "y_test = tf.keras.utils.to_categorical(y_test, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61bff520",
    "metadata": {},
    "outputs": [],
    "source": []
