feat:🐛  add the CNN Model test

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -136,6 +136,10 @@
     "\tlayers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
     "    \n",
+    "    #layer two\n",
+    "    layers.Conv2D(62, (3, 3), activation='relu'),\n",
+    "    layers.MaxPool2D((2, 2))\n",
+    "    \n",
     "])"
    ]
   },
