feat:🐛 fix the model

--- a/notebook/EEG/CNN_pre.ipynb
+++ b/notebook/EEG/CNN_pre.ipynb
@@ -260,8 +260,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "88dce6bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "\toptimizer='adam',\n",
+    "\tloss='categorical_crossentropy',\n",
+    "\tmetrics=['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3412f411",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-29 11:03:21.283726: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 150528000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 206ms/step - accuracy: 0.4627 - loss: 1.5511"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-29 11:06:06.096582: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 37632000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m168s\u001b[0m 213ms/step - accuracy: 0.4630 - loss: 1.5503 - val_accuracy: 0.8887 - val_loss: 0.3686\n",
+      "Epoch 2/5\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m193s\u001b[0m 257ms/step - accuracy: 0.8887 - loss: 0.3659 - val_accuracy: 0.9290 - val_loss: 0.2423\n",
+      "Epoch 3/5\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m201s\u001b[0m 267ms/step - accuracy: 0.9277 - loss: 0.2376 - val_accuracy: 0.9539 - val_loss: 0.1617\n",
+      "Epoch 4/5\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m198s\u001b[0m 264ms/step - accuracy: 0.9501 - loss: 0.1646 - val_accuracy: 0.9625 - val_loss: 0.1336\n",
+      "Epoch 5/5\n",
+      "\u001b[1m750/750\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m177s\u001b[0m 232ms/step - accuracy: 0.9614 - loss: 0.1261 - val_accuracy: 0.9692 - val_loss: 0.1054\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(x_train, y_train, epochs=5, batch_size=64, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "210414c5",
    "metadata": {},
    "outputs": [],
    "source": []
